cleaned code, fixed other issues as per review and tested on Firefox developer edition

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -4,10 +4,3 @@
   margin: 10px;
 }
 
-@media (prefers-color-scheme: dark) {
-  
-}
-
-@media (prefers-color-scheme: light) {
-  
-}
